k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-definitions
  labels:
    name: image-definitions
    app.kubernetes.io/name: image-definitions
    app.kubernetes.io/component: namespace
