k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-definitions
  namespace: image-definitions
  labels:
    app.kubernetes.io/name: image-definitions
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: image-definitions
    app.kubernetes.io/component: application
